--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "allowJs": true,                       /* Allow javascript files to be compiled. */
     "outDir": "./dist",                        /* Redirect output structure to the directory. */
 //    "outFile": "./dist/dom-render33.js",                        /* Redirect output structure to the directory. */
-    "rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+    // "rootDir": "./src",                       /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     /* Strict Type-Checking Options */
     "strict": true,                           /* Enable all strict type-checking options. */
     /* Module Resolution Options */
@@ -22,6 +22,9 @@
     "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true,
+    "paths": {
+      "@environments/*": ["../environments/*"]
+    },
     "removeComments": true,
 //    "noImplicitAny": true,
 //    "plugins": [{ "name": "sample-ts-plugin" }],
