--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bundle:watch": "rollup -c -w "
   },
   "devDependencies": {
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-node-resolve": "^13.0.5",
     "@rollup/plugin-replace": "^2.4.2",
     "@types/jest": "^26.0.22",
@@ -63,6 +64,7 @@
   },
   "dependencies": {
     "rxjs": "^7.3.1",
-    "simple-boot-front": "^1.0.98"
+    "simple-boot-front": "^1.0.98",
+    "tslib": "^2.3.1"
   }
 }
